--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,25 @@
     <artifactId>poi-ooxml</artifactId>
     <version>3.8-beta4</version>
 </dependency>
-
-  
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+</dependency>
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>6.14.3</version>
+</dependency>
+<dependency>
+    <groupId>com.beust</groupId>
+    <artifactId>jcommander</artifactId>
+    <version>1.27</version>
+</dependency>
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>3.2.0</version>
+</dependency>
   </dependencies>
 </project>
